Implement admin endpoint to get all invites
